# fakenvapi

./: .gitignore  .gitmodules  LICENSE  README.md  build.bat  convert_log.py  fakenvapi.ini  meson.build  package-release.sh  resource.rc.in  version.h.in
.github/workflows/: build.yml  build_windows.yml
include/: fakenvapi_inc.h  latencyflex.h  nvapi.h
src/: antilag.h  config.h  fakenvapi.cpp  fakenvapi.h  ll_antilag2.cpp  ll_antilag2.h  ll_latencyflex.cpp  ll_latencyflex.h  ll_xell.cpp  ll_xell.h  log.cpp  log.h  low_latency.cpp  low_latency.h  low_latency_d3d.cpp  low_latency_tech.cpp  low_latency_tech.h  low_latency_vk.cpp  lowlatency.cpp  lowlatency.h  main.cpp  meson.build  nvapi.cpp  nvapi.h  spoof.h  spoofInfo.cpp  spoofInfo.h  util.cpp  util.h  vulkan_hooks.cpp  vulkan_hooks.h
src/low_latency_tech/: ll_antilag2.cpp  ll_antilag2.h  ll_antilag_vk.cpp  ll_antilag_vk.h  ll_latencyflex.cpp  ll_latencyflex.h  ll_xell.cpp  ll_xell.h  low_latency_tech.h
